# CookieClickerAutomation

./: .gitignore  makefile  pyproject.toml
src/: main.py  test.py
src/app/buildings/domain/dtos/: building_dto.py
src/app/buildings/domain/providers/: i_building_provider.py  i_upgrade_adapter.py
src/app/buildings/domain/usecases/: get_best_available_building.py
src/app/buildings/infra/providers/: __init__.py  fetch_building_adapter.py  selenium_building_provider.py
src/app/upgrades/domain/dtos/: upgrade_dto.py
src/app/upgrades/domain/providers/: i_upgrade_adapter.py
src/app/upgrades/infra/providers/: chrome_upgrade_provider.py  fetch_building_adapter.py
src/framework/: selenium_provider.py
